Adding a notifier for MS Teams

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ install_requires =
     ibm-cloud-security-advisor-findingsapi-sdk>=2.0.5
     deprecated>=1.2.9
     ilcli>=0.3.1
+    pymsteams>=0.1.14
 
 [options.packages.find]
 exclude =
